welcome.lessons.welcome.methods.basics.Methods.scala.error
Methods:2: error: not found: value x
  x = 0
  ^Methods:5: error: not found: value x
    x = x+1
    ^Methods:7: error: not found: value x
  for(compteur <- 1 to x){
                       ^Methods:9: error: value poseBiscuit is not a member of Unit
possible cause: maybe a semicolon is missing before `value poseBiscuit'?
  }poseBiscuit()
   ^